static/styles.css
body {
    position: relative;
    overflow: hidden;
    background-color: #1a1a1a;
    color: white;
}
#sidebar {
    width: 80px;
    height: 100vh;
    background: #343a40;
    color: white;
    padding: 20px;
    transition: width 0.3s ease;
    overflow: hidden;
}
#sidebar:hover {
    width: 250px;
}
.nav-item {
    white-space: nowrap;
}
.nav-link {
    display: flex;
    align-items: center;
    color: white;
    padding: 10px;
}
.nav-link img {
    width: 24px;
    height: 24px;
    margin-right: 10px;
}
#content {
    flex-grow: 1;
    padding: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    position: relative;
    text-align: center;
    color: white;
}
#slideshow {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
}
.slide {
    position: absolute;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
    opacity: 0;
    transition: opacity 1s ease-in-out;
}
.active {
    opacity: 1;
}
.btn-custom {
    margin-top: 20px;
    padding: 10px 20px;
    font-size: 18px;
    background-color: #007bff;
    color: white;
    border: none;
    cursor: pointer;
    border-radius: 5px;
}

.dropdown-toggle {
    outline: 0;
}

.btn-login {
    padding-left: 2.5rem; 
    padding-right: 2.5rem;
}

